GNOME Bugzilla – Bug 690348
Fix g_type_add_class_private() name in g_warning
Last modified: 2012-12-17 15:27:07 UTC
When g_type_class_get_private is called without calling g_type_add_class_private first, a g_warning is issued, but the name of the function to call is wrong: g_type_class_add_class_private.
Created attachment 231720 [details] [review] Fix g_type_add_class_private() name in g_warning
Review of attachment 231720 [details] [review]: Looks good, thanks!
Attachment 231720 [details] pushed as b055c82 - Fix g_type_add_class_private() name in g_warning